fixed about page overflow bug

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -36,3 +36,18 @@
     grid-area: right;
     background: darkcyan;
 }
+
+@media screen and (max-width: 700px) {
+    .gridContainer{
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: auto;
+        grid-template-areas: 
+                "left"
+                "right";
+        min-height: 100%;
+        width: 100%;
+        padding: 0px;
+        margin: 0px;
+    }
+}
